provato a migliorare il fit per la lifetime

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "findMaximumSiPM22.C": "cpp",
         "findMaximumSiPMv2.C": "cpp",
         "Macro.C": "cpp",
-        "landauFit.C": "cpp"
+        "landauFit.C": "cpp",
+        "RooFit_prova.C": "cpp"
     },
 
     "workbench.colorCustomizations": {
